# vsepr-rs

./: Cargo.toml  README.md
src/: lib.rs  math.rs  optimizer.rs  vsepr.rs
