[package]
name = "vsepr-rs"
version = "0.1.2"
edition = "2021"
description = "A lightweight, high-performance molecular geometry optimizer based on VSEPR theory."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForblazeProject/vsepr-rs.git"
keywords = ["chemistry", "molecule", "vsepr", "geometry-optimization", "polymer"]
categories = ["science"]

[dependencies]
# Zero dependencies!